# cable_signs

./: .gitignore  build.py  build_correct.py  build_final.py  build_with_tk.py  check_structure.py  debug_log.txt  main.py  main_test.py  mini_triangle_test.py  pyproject.toml  tcl_patch_ search.py  test.py
