[tool.poetry]
name = "cable-signs"
version = "0.1.0"
description = ""
authors = ["AkeksandrStrulkov <astrulkov@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
reportlab = "^4.4.4"
openpyxl = "^3.1.5"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
