[project]
name = "cable_signs"
version = "0.1.0"
description = "Генератор бирок"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "reportlab>=4.4.4",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cable_signs"
version = "0.1.0"
description = "Генератор бирок"
authors = ["AkeksandrStrulkov <astrulkov@yandex.ru>"]
readme = "README.md"
package-mode = false  # Ключевая настройка!

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
reportlab = "^4.4.4"
openpyxl = "^3.1.5"
pillow = "^11.3.0"
pyinstaller = {version = ">=6.16.0,<7.0.0", python = "<3.15"}
nuitka = "^2.7.16"
